--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,5 @@ add_executable(posmidtree posmidtree.cpp)
 add_executable(qsort qsort.cpp)
 add_executable(union-find union-find.cpp)
 add_executable(guibing guibing.cpp)
+add_executable(lc-100-panduanShu lc-100-panduanShu.cpp)
+add_executable(lc-617-heBingShu lc-617-heBingShu.cpp)
