--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,8 @@ add_executable(posmidtree posmidtree.cpp)
 add_executable(qsort qsort.cpp)
 add_executable(union-find union-find.cpp)
 add_executable(guibing guibing.cpp)
+add_executable(palouti palouti.cpp)
+add_executable(quan-pai-lie quan-pai-lie.cpp)
+add_executable(lc-206-reverseLinkedList lc-206-reverseLinkedList.cpp)
 add_executable(lc-100-panduanShu lc-100-panduanShu.cpp)
 add_executable(lc-617-heBingShu lc-617-heBingShu.cpp)
