--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,5 @@ add_executable(quan-pai-lie quan-pai-lie.cpp)
 add_executable(lc-206-reverseLinkedList lc-206-reverseLinkedList.cpp)
 add_executable(lc-100-panduanShu lc-100-panduanShu.cpp)
 add_executable(lc-617-heBingShu lc-617-heBingShu.cpp)
+
+add_executable(two-stack-to-queue two-stack-to-queue.cpp)
