--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_executable(lc-617-heBingShu lc-617-heBingShu.cpp)
 add_executable(two-stack-to-queue two-stack-to-queue.cpp)
 add_executable(test test.cpp)
 add_executable(heapSort heapSort.cpp)
+add_executable(lc-53-zui-da-zi-xu-he lc-53-zui-da-zi-xu-he.cpp)
